# HelpApp

./: .gitignore  .gitmodules  ARKITEKTUR.md  NÄSTA_STEG.md  README.md  SWIFT6_ARKITEKTURVERIFIERING_SVAR.md  SWIFT6_CONCURRENCY_FIXES.md  pr-body.md  security_best_practices_report.md  security_ownership_map_report.md
backend/: .env.example  .gitignore  .structure_overview  README.md  api.py  pyproject.toml
backend/docs/: ADDING_NEW_SOURCE.md  CLEAN_ARCHITECTURE.md  INSIGHT_QUERY_ARCHITECTURE.md  MODEL_VERIFICATION.md  README.md  REFACTORING_SUMMARY.md  SHIM_AUDIT_SUMMARY.md  SHIM_DEPRECATION_STRATEGY.md  SOURCE_GATING_CONTRACT.md  STRUCTURE.md  domain_operation_table.csv  domain_operation_table.md  intent_plan_combinations.csv
backend/reports/: architecture_pr_template.md  architecture_violations.csv  architecture_violations.json
backend/scripts/: generate_intent_plan_csv.py  test_ios_request.py
backend/tests/: api_test_case.py  test_api_query_assistant_store.py  test_api_support_settings.py  test_assistant_core.py  test_embedding_service_ollama.py  test_embedding_unavailable_errors.py  test_feature_source_gating.py  test_llm_routes_removed.py  test_oauth_gmail_flow.py  test_process_memory.py  test_query_analytics_dispatch.py  test_query_health_intent.py  test_query_intent_filters.py  test_query_qwen_filter_structuring.py  test_query_router_calendar_mail_understanding.py  test_query_router_domain_guardrails.py  test_query_router_files_photos_understanding.py  test_query_router_location_health_understanding.py  test_query_router_notes_memory_understanding.py  (+11 more)
(+488 files in other folders)
